--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,4 @@
-/*!==============================
- * Theme Name: Enlight
- * Theme URL: https://probootstrap.com/enlight-free-education-responsive-bootstrap-website-template
- * Author: ProBootstrap.com
- * Author URL: https://probootstrap.com
- * License: Released for free under the Creative Commons Attribution 3.0 license (probootstrap.com/license)
- */
+
 @font-face {
   font-family: 'icomoon';
   src: url("../fonts/icomoon/icomoon.eot?1z9v6x");
@@ -1515,7 +1509,7 @@ a:hover, a:focus, a:active {
 .nav-tabs.probootstrap-center > li, .nav-pills.probootstrap-center > li {
   float: none;
   display: inline-block;
-  *display: inline;
+  display: inline;
   zoom: 1;
 }
 
@@ -1588,7 +1582,7 @@ a:hover, a:focus, a:active {
   top: 2px;
   width: 30px;
   display: inline-block;
-  *display: inline;
+  display: inline;
   zoom: 1;
 }
 
